@@ -1,0 +1,1 @@
+FAILED: Error in semantic analysis: No Partition Predicate Found for Alias "x" Table "srcpart"
