@@ -44,6 +44,9 @@ Trunk -  Unreleased
     HIVE-773. Remove lzocodec import from FileSinkOperator.
     (He Yongqiang via johan)
 
+    HIVE-769. Bug in partition pruner checking - bug in patch. 
+    (Zheng Shao via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
